# django-rest-accounts

./: .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
accounts/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
tests/: conftest.py  test_model.py  test_views.py
