[metadata]
name = Django-Accounts
version = attr: accounts.__version__
url = https://github.com/kumaraditya303/Django-Accounts
author = Kumar Aditya
author_email = @kumaraditya303
description = A reusable Django Accounts apps built on Django Rest Framework for fast REST development. 
long_description = file: README.md
license = MIT
classifiers = 
    Framework :: Django
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
    Django
    djangorestframework
    pillow
